--- a/src/TUIKit/components/TUIChat/style/index.scss
+++ b/src/TUIKit/components/TUIChat/style/index.scss
@@ -4,9 +4,15 @@
 @import './uni';
 @import './wx';
 
-:not(not) {
+/* 基础样式 - 只应用于聊天组件内的元素 */
+.tui-chat * {
+  box-sizing: border-box;
+}
+
+/* 确保聊天容器的基础布局 */
+.chat,
+.tui-chat {
   display: flex;
   flex-direction: column;
-  box-sizing: border-box;
   min-width: 0;
 }
