--- a/src/TUIKit/components/TUIChat/style/web.scss
+++ b/src/TUIKit/components/TUIChat/style/web.scss
@@ -1,4 +1,5 @@
-.tui-chat {
+.tui-chat,
+.tui-chat-content {
   width: 100%;
   height: 100%;
   max-width: 100%;
@@ -19,12 +20,14 @@
     padding: 10px;
     box-sizing: border-box;
     display: flex;
+    flex-shrink: 0; /* 防止头部被压缩 */
   }
 
   &-message-list {
     flex: 1;
     overflow: hidden;
     display: flex;
+    min-height: 0; /* 确保flex子项可以收缩 */
   }
 
   &-leave-group {
@@ -33,6 +36,7 @@
     border-top: 1px solid #efefef;
     justify-content: center;
     align-items: center;
+    flex-shrink: 0; /* 防止被压缩 */
 
     &-mobile {
       height: 50px;
@@ -42,5 +46,11 @@
   &-message-input {
     height: 160px;
     display: flex;
+    flex-shrink: 0; /* 防止输入框被压缩 */
+    box-sizing: border-box;
+  }
+
+  &-message-input-toolbar {
+    flex-shrink: 0; /* 防止工具栏被压缩 */
   }
 }
