--- a/src/TUIKit/components/TUIChat/message-input-toolbar/evaluate/style/color.scss
+++ b/src/TUIKit/components/TUIChat/message-input-toolbar/evaluate/style/color.scss
@@ -13,9 +13,17 @@
     font-weight: 500;
     color: #999;
 
+    /* #ifndef MP-WEIXIN */
     a {
       color: #006eff;
     }
+    /* #endif */
+
+    /* #ifdef MP-WEIXIN */
+    .evaluate-link {
+      color: #006eff;
+    }
+    /* #endif */
   }
 
   &-content {
@@ -39,11 +47,21 @@
       .evaluate-main-content {
         background: #fff;
 
+        /* #ifndef MP-WEIXIN */
         p {
           a {
             color: #3370ff;
           }
         }
+        /* #endif */
+
+        /* #ifdef MP-WEIXIN */
+        .evaluate-text {
+          .evaluate-link {
+            color: #3370ff;
+          }
+        }
+        /* #endif */
 
         .close {
           font-family: PingFangSC-Regular;
