--- a/src/TUIKit/components/TUIChat/message-list/style/index.scss
+++ b/src/TUIKit/components/TUIChat/message-list/style/index.scss
@@ -3,7 +3,11 @@
 @import "./web";
 @import "./h5";
 
-:not(not) {
+/* 基础样式 - 应用于消息列表的主要元素 */
+.tui-message-list,
+.message-li,
+.message-item,
+.message-tool {
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
