--- a/src/TUIKit/assets/styles/common.scss
+++ b/src/TUIKit/assets/styles/common.scss
@@ -1,3 +1,5 @@
+/* 微信小程序不支持标签选择器，使用条件编译 */
+/* #ifndef MP-WEIXIN */
 body, div, ul, ol, dt, dd, li, dl, h1, h2, h3, h4, p {
   margin:0;
   padding:0;
@@ -21,14 +23,6 @@ body {
   background:#FFF;
 }
 
-.clear {
-  clear:both;
-  height:1px;
-  width:100%;
-  overflow:hidden;
-  margin-top:-1px;
-}
-
 a {
   color:#000;
   text-decoration:none;
@@ -45,6 +39,16 @@ input, textarea {
 
 input:focus, input:active, textarea:focus, textarea:active {
   outline: none;
+}
+/* #endif */
+
+/* 通用样式类 - 兼容微信小程序 */
+.clear {
+  clear:both;
+  height:1px;
+  width:100%;
+  overflow:hidden;
+  margin-top:-1px;
 }
 
 .chat-aside {
