--- a/src/TUIKit/components/TUIChat/message-list/style/color.scss
+++ b/src/TUIKit/components/TUIChat/message-list/style/color.scss
@@ -9,9 +9,17 @@
   .image-dialog {
     background: rgba(0, 0, 0, 0.6);
 
+    /* #ifndef MP-WEIXIN */
     header {
       background: rgba(0,0,0,0.49);
     }
+    /* #endif */
+
+    /* #ifdef MP-WEIXIN */
+    .image-dialog-header {
+      background: rgba(0,0,0,0.49);
+    }
+    /* #endif */
   }
 }
 
@@ -24,9 +32,17 @@
     background: #FFF;
 
     .input {
+      /* #ifndef MP-WEIXIN */
       input {
         background: #F4F5F9;
       }
+      /* #endif */
+
+      /* #ifdef MP-WEIXIN */
+      .input-field {
+        background: #F4F5F9;
+      }
+      /* #endif */
     }
   }
 }
