--- a/src/TUIKit/components/TUIGroup/manage-group/style/index.scss
+++ b/src/TUIKit/components/TUIGroup/manage-group/style/index.scss
@@ -12,6 +12,7 @@
   border-radius: 50%;
 }
 
+/* #ifndef MP-WEIXIN */
 .icon-close::before,
 .icon-close::after {
   content: "";
@@ -20,6 +21,18 @@
   height: 16px;
   width: 2px;
   top: 50%;
+/* #endif */
+
+/* #ifdef MP-WEIXIN */
+.icon-close .icon-close-before,
+.icon-close .icon-close-after {
+  content: "";
+  position: absolute;
+  background-color: #8F959E;
+  height: 16px;
+  width: 2px;
+  top: 50%;
+/* #endif */
   left: 50%;
   margin-top: -8px;
   margin-left: -1px;
