--- a/src/TUIKit/components/TUIChat/style/h5.scss
+++ b/src/TUIKit/components/TUIChat/style/h5.scss
@@ -1,38 +1,25 @@
 .chat {
-  display: flex;
-  flex-direction: column;
-  /* 在uni-app中使用窗口高度，避免被导航栏影响 */
+  display: block;
   height: 100%;
   overflow: hidden;
-  box-sizing: border-box;
 }
 
-.tui-chat-h5,
-.tui-chat-content.tui-chat-h5 {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  overflow: hidden;
-
+.tui-chat-h5 {
   &-message-list {
     flex: 1;
     overflow: hidden;
     display: flex;
-    min-height: 0; /* 确保flex子项可以收缩 */
   }
 
   &-message-input {
     height: auto;
-    max-height: 200px; /* 限制输入框最大高度 */
     padding: 10px 10px 0;
     border-top: 1px solid #eee;
-    flex-shrink: 0; /* 防止输入框被压缩 */
   }
 
   &-message-input-toolbar {
     order: 1;
     border: none;
-    flex-shrink: 0; /* 防止工具栏被压缩 */
   }
 }
 
