--- a/src/TUIKit/components/TUIChat/style/index.scss
+++ b/src/TUIKit/components/TUIChat/style/index.scss
@@ -4,20 +4,9 @@
 @import './uni';
 @import './wx';
 
-/* 基础样式 - 应用于聊天组件的主要元素 */
-.tui-chat,
-.tui-chat-content,
-.tui-chat-header,
-.tui-chat-message-list,
-.tui-chat-message-input,
-.tui-chat-message-input-toolbar {
-  box-sizing: border-box;
-}
-
-/* 确保聊天容器的基础布局 */
-.chat,
-.tui-chat {
+:not(not) {
   display: flex;
   flex-direction: column;
+  box-sizing: border-box;
   min-width: 0;
 }
