--- a/src/TUIKit/components/TUIChat/style/uni.scss
+++ b/src/TUIKit/components/TUIChat/style/uni.scss
@@ -1,55 +1,10 @@
-/* uni-app 特定样式 */
 .tui-chat-uni {
   &-message-input {
-    max-height: 200px; /* 减少最大高度，防止超出屏幕 */
-    min-height: 50px; /* 设置最小高度 */
+    max-height: 370px;
     padding: 10px;
-    flex-shrink: 0; /* 防止被压缩 */
-    box-sizing: border-box;
   }
 
   &-message-input-toolbar {
     z-index: 100;
-    flex-shrink: 0; /* 防止被压缩 */
   }
 }
-
-/* 确保在uni-app环境下整体布局正确 */
-.tui-chat-uniapp-header {
-  display: none; /* 隐藏头部，使用系统导航栏 */
-}
-
-/* uni-app 环境下的聊天容器 */
-.chat {
-  /* 默认使用100%高度 */
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
-  box-sizing: border-box;
-}
-
-.tui-chat.tui-chat-h5 {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
-  box-sizing: border-box;
-}
-
-/* H5环境特殊处理 */
-/* #ifdef H5 */
-.chat {
-  /* H5环境下使用100vh */
-  height: 100vh;
-}
-/* #endif */
-
-/* 小程序和APP环境 */
-/* #ifdef APP-PLUS || MP-WEIXIN || MP-ALIPAY || MP-BAIDU || MP-TOUTIAO || MP-QQ */
-.chat,
-.tui-chat.tui-chat-h5 {
-  /* 在小程序和APP中，页面高度通常是100% */
-  height: 100%;
-}
-/* #endif */
