--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,9 +1,9 @@
 @import './fonts.css';
 
-// 全局设置思源黑体
+// 全局设置 MiSans 字体
 :root,
 page {
-  font-family: 'OPPO Sans', 'Source Han Sans CN', 'PingFang SC', 'Microsoft YaHei', sans-serif;
+  font-family: 'MiSans', 'Source Han Sans CN', 'PingFang SC', 'Microsoft YaHei', sans-serif;
 }
 
 // 修改按主题色
